@@ -1,3 +1,9 @@
+2010-08-31  Andreas Kupries  <andreask@activestate.com>
+
+	* win/tcl.m4: Applied patch by Jeff fixing issues with the
+	manifest handling on Win64.
+	* win/configure: Regenerated.
+
 2010-08-29  Donal K. Fellows  <dkf@users.sf.net>
 
 	*** 8.5.9 TAGGED FOR RELEASE ***
